<resources>
    <string name="app_name">Weather Demo</string>

    <string name="zip_desc">Enter zip code to get weather updates</string>
    <string name="enter_zip">Enter zip</string>
    <string name="submit">Submit</string>
    <string name="error_zip">Enter correct zip</string>
    <string name="degree">°C</string>
    <string name="future_forecasts">Future Forecasts</string>
    <string name="logo">logo</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="sunrise">sunrise</string>
    <string name="sunset">sunset</string>
</resources>
