<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.ZipcodeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/logo"
        android:layout_width="@dimen/weather_logo"
        android:layout_height="@dimen/weather_logo"
        android:layout_marginTop="@dimen/margin_100"
        android:src="@drawable/ic_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_18"
        android:layout_marginTop="@dimen/margin_52"
        android:layout_marginEnd="@dimen/margin_18"
        android:gravity="center"
        android:text="@string/zip_desc"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/zipET"
        android:maxLength="6"
        android:inputType="number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_18"
        android:layout_marginTop="@dimen/margin_18"
        android:layout_marginEnd="@dimen/margin_18"
        android:hint="@string/enter_zip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="@dimen/margin_18"
        android:id="@+id/submitBt"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        app:cornerRadius="@dimen/corner_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zipET" />

    <ProgressBar
        android:id="@+id/pb"
        android:visibility="gone"
        android:layout_width="@dimen/pb_size"
        android:layout_height="@dimen/pb_size"
        app:layout_constraintBottom_toBottomOf="@+id/submitBt"
        app:layout_constraintEnd_toEndOf="@+id/submitBt"
        app:layout_constraintStart_toStartOf="@+id/submitBt"
        app:layout_constraintTop_toTopOf="@+id/submitBt" />
</androidx.constraintlayout.widget.ConstraintLayout>