<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather"
    android:background="@drawable/gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_18"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_18"
        android:layout_marginTop="@dimen/margin_18"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_big"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/city"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <ImageView
        android:id="@+id/iconIV"
        android:contentDescription="@string/weather_icon"
        android:scaleType="fitXY"
        android:layout_marginEnd="@dimen/margin_18"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        app:layout_constraintBottom_toBottomOf="@+id/temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/city" />

    <TextView
        android:id="@+id/desc"
        android:layout_marginTop="@dimen/margin_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_18"
        app:layout_constraintStart_toStartOf="@+id/temp"
        app:layout_constraintTop_toBottomOf="@+id/temp" />

    <ImageView
        android:id="@+id/imageView2"
        android:contentDescription="@string/sunrise"
        android:layout_marginTop="18dp"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:tint="@android:color/white"
        android:src="@drawable/ic_sunrise"
        app:layout_constraintStart_toStartOf="@+id/desc"
        app:layout_constraintTop_toBottomOf="@+id/desc" />

    <TextView
        android:id="@+id/sunriseTV"
        android:contentDescription="@string/sunset"
        android:layout_marginStart="@dimen/text_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_18"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/sunsetTV"
        android:layout_marginStart="@dimen/margin_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_18"
        app:layout_constraintBottom_toBottomOf="@+id/sunsetIV"
        app:layout_constraintStart_toEndOf="@+id/sunsetIV"
        app:layout_constraintTop_toTopOf="@+id/sunsetIV" />

    <ImageView
        android:id="@+id/sunsetIV"
        android:tint="@android:color/white"
        android:layout_marginTop="18dp"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:src="@drawable/ic_sunset"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/futureTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_18"
        android:text="@string/future_forecasts"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_big"
        app:layout_constraintStart_toStartOf="@+id/sunsetIV"
        app:layout_constraintTop_toBottomOf="@+id/sunsetIV" />
    <RelativeLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/futureTV"
        android:background="#90FFFFFF"
        android:layout_marginTop="@dimen/margin_18"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
